[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "is-it-up"
version = "0.0.1"
dependencies = ["cachetools", "curl-cffi", "fastapi[standard]", "gunicorn"]
requires-python = ">=3.11"
authors = [{name = "Fastily", email = "fastily@users.noreply.github.com"}]
description = "Queries a site to check if it is accessible"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["uptime", "query"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/fastily/is-it-up"
"Bug Tracker" = "https://github.com/fastily/is-it-up/issues"

[tool.uv.build-backend]
module-name = "is_it_up"
module-root = ""